--- a/.env.example
+++ b/.env.example
@@ -8,19 +8,22 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=moui_basic
-DB_USERNAME=root
+DB_PORT=5432
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+
+SESSION_DRIVER=database
+SESSION_DOMAIN=.moui-basic.test
 SESSION_LIFETIME=120
+SANCTUM_STATEFUL_DOMAINS=hmr.moui-basic.test:8080
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -56,3 +59,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VUE_APP_PROTOCOL=https://
+VUE_APP_DOMAIN=moui-basic.test
+VUE_APP_SLUG=system
